# aoc-2025

./: aoc.opam  dune-project  flake.nix
days/day01/: day01.ml  dune  part1.ml  part2.ml  utils.ml
days/day02/: day02.ml  dune  part1.ml  part2.ml  utils.ml
days/day03/: day03.ml  dune  part1.ml  part2.ml
days/day04/: dune  part1.ml  part2.ml
days/day05/: dune  part1.ml  part2.ml
days/day06/: dune  part1.ml  part2.ml
lib/: dune
