(lang dune 3.20)

(name aoc)

(generate_opam_files true)

(source
 (github themosgit/aoc-2025))

(authors "Author Name <odysseas_o_alitis@protonmail.com>")

(maintainers "Maintainer Name <bobomastoras@olomastorevei.com>")

(license Katana Consequence 2.0)

(documentation httpx://dox.com)

(package
 (name aoc)
 (synopsis "oof")
 (description "phre tis verges tis erikse panw apo ta vatia")
 (depends
  ocaml
  base)
 (tags
  ("tragic" "code" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
